# autonomy-journal

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  ETHICS.md  LICENSE  MISSION.md  PROOFS.md  README.md  SECURITY.md  pyproject.toml  release_state.v1.2.3.json
.github/workflows/: ci.yml  release.yml
autonomy_journal/: __init__.py  journal.py  schema.py
docs/: EVAL1_ARTIFACT_SET.md  EVAL2_DYNAMIC_THRESHOLD_SKETCH.md  GROWTH_POLICY.md  PUBLIC_BUNDLE_V1.md
examples/: simple_agent.py
proofs/: run1.jsonl  run2.jsonl
schemas/: autonomy_journal.v1.autonomy.schema.json  reality_state.v1.schema.json
src/autonomy_journal/: __init__.py  journal.py  schema.py
tags/: v0.1.0.md
tests/: test_journal.py  test_schema.py
tools/: check_schemas.py  extract_metadata.py  make_proofs.sh  pii_allowlist.regex  pii_scan.py  unicode_guard.py  validate_jsonl.py
