[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomy-journal"
version = "1.1.0"
description = "Deterministic, schema-first JSONL logs for toy agent simulations (verification-first)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SagaGonzo", email = "wowgamer1832@gmail.com"}
]
keywords = ["agent", "simulation", "logging", "jsonl", "schema", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/SagaGonzo/autonomy-journal"
Repository = "https://github.com/SagaGonzo/autonomy-journal"
Issues = "https://github.com/SagaGonzo/autonomy-journal/issues"

[tool.setuptools]
packages = ["autonomy_journal"]
