[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomy-journal"
version = "1.2.3"
description = "Autonomy Journal - Deterministic JSONL logging"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jsonschema>=4.17.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
